# learning-cgal

./: T111.vtk
CPP/: Bad.vtk  CMakeLists.txt  cgal3d.cxx  cgal3dCH.cxx  cgalAngular.cxx  cgalData.cxx  cgalStereo.cxx  simple.cxx  vtk3d.cxx  vtkStereo.cxx
Python/: Bad.vtk  Output.vtk  Rotated.vtk  Scene.vtk  T7.vtk  angles.py  cgal.py  stereo.py  temp.py
